[DART-387] - Dockerized application with same configuration as Scala examples (#1)
* parameterized config resource choice

* changed Dockerfile for consistency

Co-authored-by: John Hungerford <john.hungerford@labsadminsMBP2.fios-router.home>